Now you can order

--- a/src/Food.Web/Views/Home/Index.cshtml
+++ b/src/Food.Web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                     <img src="@restaurant.ImageUrl" class="card-img-top" alt="@restaurant.Name">
                     <div class="card-body">
                         <h5 class="card-title">@restaurant.Name</h5>
-                        <a href="/Restaurant/Details/@restaurant.Id" class="btn btn-primary">View Menu</a>
+                        <a href="/Restaurant/Index/@restaurant.Id" class="btn btn-primary">View Menu</a>
                     </div>
                 </div>
             </div>
